# dis

./: .envrc  .gitignore  Cargo.toml  double_triangle.typ  double_triangle_embeddings.typ  double_triangle_integrands.typ  double_triangle_new.m  doubletriangle.typ  fancy_settings.json  filename  flake.nix  formatList.wls  gamma.frm  hadronic_nlo_qq_fs.dot  hadronic_nlo_qq_fs.typ  hadronic_nlo_qq_fs_e.dot  hadronic_nlo_qq_fs_e.typ  layout_iters.json  layout_params.json  n0lo.typ  n1lo.typ  n2lo.typ  nlo_cut.dot  nlo_cut_no_empty_filter.dot  nlo_cuts.dot  nlo_fs.dot  nlo_fs_any_nresolved.dot  nlo_fs_any_nresolved_non_disconnecting.dot  nlo_fs_any_nresolved_non_disconnecting.typ  nlo_fs_cut_cont.dot  nlo_fs_no_blobs_any_nresolved.dot  nlo_fs_no_spect_lim.typ  nlo_fs_qq.dot  nlo_fs_qq.typ  nnlo.typ  nnlo_cut.dot  nsupergraphn2lo0.typ  nsupergraphn2lo1.typ  numerator_benchmarks.nb  partial_fractioning.m  (+30 more)
.zed/: settings.json  tasks.json
outputs/1lo/: all_supergraphs.typ  nsupergraphn1lo0.m  nsupergraphn1lo0.typ  supergraph0.m  supergraph0.typ  supergraph000.m  supergraph000.typ  supergraphs.typ
outputs/2lo/: all_supergraphs.typ  nsupergraphn2lo0.m  nsupergraphn2lo0.typ  nsupergraphn2lo1.m  nsupergraphn2lo1.typ  supergraph0.m  supergraph0.typ  supergraph1.m  supergraph1.typ  supergraphs.typ
outputs/3lo/: all_supergraphs.typ  nsupergraphn3lo0.m  nsupergraphn3lo0.typ  nsupergraphn3lo1.m  nsupergraphn3lo1.typ  nsupergraphn3lo10.m  nsupergraphn3lo10.typ  nsupergraphn3lo11.m  nsupergraphn3lo11.typ  nsupergraphn3lo12.m  nsupergraphn3lo12.typ  nsupergraphn3lo13.m  nsupergraphn3lo13.typ  nsupergraphn3lo14.m  nsupergraphn3lo14.typ  nsupergraphn3lo15.m  nsupergraphn3lo15.typ  nsupergraphn3lo16.m  nsupergraphn3lo16.typ  nsupergraphn3lo17.m  nsupergraphn3lo17.typ  nsupergraphn3lo18.m  nsupergraphn3lo18.typ  nsupergraphn3lo2.m  nsupergraphn3lo2.typ  nsupergraphn3lo3.m  nsupergraphn3lo3.typ  nsupergraphn3lo4.m  nsupergraphn3lo4.typ  nsupergraphn3lo5.m  nsupergraphn3lo5.typ  nsupergraphn3lo6.m  nsupergraphn3lo6.typ  nsupergraphn3lo7.m  nsupergraphn3lo7.typ  nsupergraphn3lo8.m  nsupergraphn3lo8.typ  nsupergraphn3lo9.m  nsupergraphn3lo9.typ  supergraph00.m  (+28 more)
outputs/double_triangle/: double_triangle.typ  double_triangle_new.m
outputs/generic/: n2lo.typ  nsupergraphn2lo1.typ
outputs/self_energy/: self_energy.typ  self_energy_integrands.typ  self_energy_new.m
src/: compare_cuts.rs  double_triangle.rs  four_gluon.rs  fstest.rs  fstest_two_loop.rs  gamma.rs  gen.rs  lib.rs  nnlo.rs  permutation.rs  self_energy.rs  tests.rs  windingcut.rs
